ext/grok/grok.h


typedef enum _GRK_COLOR_SPACE
{
	GRK_CLRSPC_UNKNOWN = 0, 
	GRK_CLRSPC_SRGB = 2, 
	GRK_CLRSPC_GRAY = 3, 
	GRK_CLRSPC_SYCC = 4, 
	GRK_CLRSPC_EYCC = 5, 
	GRK_CLRSPC_CMYK = 6, 
	GRK_CLRSPC_DEFAULT_CIE = 7, 
	GRK_CLRSPC_CUSTOM_CIE = 8, 
	GRK_CLRSPC_ICC = 9 
} GRK_COLOR_SPACE;
typedef void (*grk_msg_callback)(const char* msg, void* client_data);
typedef struct _grk_object
{
	void* wrapper;
} grk_object;
typedef struct _grk_header_info
{
	GRK_SUPPORTED_FILE_FMT decompressFormat;
	bool forceRGB;
	bool upsample;
	grk_precision* precision;
	uint32_t numPrecision;
	bool splitByComponent;
	bool singleTileDecompress;
	uint32_t cblockw_init;
	uint32_t cblockh_init;
	bool irreversible;
	uint32_t mct;
	uint16_t rsiz;
	uint32_t numresolutions;
	uint8_t csty;
	uint8_t cblk_sty;
	uint32_t prcw_init[GRK_J2K_MAXRLVLS];
	uint32_t prch_init[GRK_J2K_MAXRLVLS];
	uint32_t tx0;
	uint32_t ty0;
	uint32_t t_width;
	uint32_t t_height;
	uint32_t t_grid_width;
	uint32_t t_grid_height;
	uint16_t numlayers;
	uint8_t* xml_data;
	size_t xml_data_len;
	size_t num_comments;
	char* comment[GRK_NUM_COMMENTS_SUPPORTED];
	uint16_t comment_len[GRK_NUM_COMMENTS_SUPPORTED];
	bool isBinaryComment[GRK_NUM_COMMENTS_SUPPORTED];
	grk_asoc asocs[GRK_NUM_ASOC_BOXES_SUPPORTED];
	uint32_t num_asocs;
} grk_header_info;
typedef struct _grk_stream_params
{
	const char* file;
	uint8_t* buf;
	size_t len;
} grk_stream_params;
typedef struct _grk_decompress_core_params
{
	uint8_t reduce;
	uint16_t max_layers;
	GRK_TILE_CACHE_STRATEGY tileCacheStrategy;
	uint32_t randomAccessFlags_;
	grk_io_pixels_callback io_buffer_callback;
	void* io_user_data;
	grk_io_register_reclaim_callback io_register_client_callback;
} grk_decompress_core_params;
typedef enum _GRK_CODEC_FORMAT
{
	GRK_CODEC_UNK = -1, 
	GRK_CODEC_J2K = 0, 
	GRK_CODEC_JP2 = 2 
} GRK_CODEC_FORMAT;
typedef struct _grk_decompress_params
{
	grk_decompress_core_params core;
	char infile[GRK_PATH_LEN];
	char outfile[GRK_PATH_LEN];
	GRK_CODEC_FORMAT decod_format;
	GRK_SUPPORTED_FILE_FMT cod_format;
	float dw_x0;
	float dw_x1;
	float dw_y0;
	float dw_y1;
	uint16_t tileIndex;
	bool singleTileDecompress;
	grk_precision* precision;
	uint32_t numPrecision;
	bool force_rgb;
	bool upsample;
	bool split_pnm;
	bool io_xml;
	uint32_t compression;
	uint32_t compressionLevel;
	bool verbose_;
	int32_t deviceId;
	uint32_t duration; 
	uint32_t kernelBuildOptions;
	uint32_t repeats;
	uint32_t numThreads;
} grk_decompress_parameters;
typedef struct _grk_image_comp
{
	uint32_t x0;
	uint32_t y0;
	uint32_t w;
	uint32_t stride;
	uint32_t h;
	uint8_t dx;
	uint8_t dy;
	uint8_t prec;
	bool sgnd;
	GRK_CHANNEL_TYPE type;
	GRK_CHANNEL_ASSOC association;
	uint16_t Xcrg, Ycrg;
	int32_t* data;
} grk_image_comp;
typedef struct _grk_image_meta
{
	grk_object obj;
	grk_color color;
	uint8_t* iptc_buf;
	size_t iptc_len;
	uint8_t* xmp_buf;
	size_t xmp_len;
} grk_image_meta;
typedef struct _grk_image
{
	grk_object obj;
	uint32_t x0;
	uint32_t y0;
	uint32_t x1;
	uint32_t y1;
	uint16_t numcomps;
	GRK_COLOR_SPACE color_space;
	bool paletteApplied_;
	bool channelDefinitionApplied_;
	bool has_capture_resolution;
	double capture_resolution[2];
	bool has_display_resolution;
	double display_resolution[2];
	GRK_SUPPORTED_FILE_FMT decompressFormat;
	bool forceRGB;
	bool upsample;
	grk_precision* precision;
	uint32_t numPrecision;
	bool hasMultipleTiles;
	bool splitByComponent;
	uint16_t decompressNumComps;
	uint32_t decompressWidth;
	uint32_t decompressHeight;
	uint8_t decompressPrec;
	GRK_COLOR_SPACE decompressColourSpace;
	grk_io_buf interleavedData;
	uint32_t rowsPerStrip; 
	uint32_t rowsPerTask; 
	uint64_t packedRowBytes;
	grk_image_meta* meta;
	grk_image_comp* comps;
} grk_image;
typedef struct _grk_plugin_tile
{
	uint32_t decompress_flags;
	size_t numComponents;
	grk_plugin_tile_component** tileComponents;
} grk_plugin_tile;
typedef grk_object grk_codec;
GRK_API const char* GRK_CALLCONV grk_version(void);
GRK_API bool GRK_CALLCONV grk_initialize(const char* pluginPath, uint32_t numthreads);
GRK_API void GRK_CALLCONV grk_deinitialize();
GRK_API grk_object* GRK_CALLCONV grk_object_ref(grk_object* obj);
GRK_API void GRK_CALLCONV grk_object_unref(grk_object* obj);
GRK_API void GRK_CALLCONV grk_set_msg_handlers(grk_msg_callback info_callback, void* info_user_data,
											   grk_msg_callback warn_callback, void* warn_user_data,
											   grk_msg_callback error_callback,
											   void* error_user_data);
GRK_API grk_image* GRK_CALLCONV grk_image_new(uint16_t numcmpts, grk_image_comp* cmptparms,
											  GRK_COLOR_SPACE clrspc);
GRK_API grk_image_meta* GRK_CALLCONV grk_image_meta_new(void);
GRK_API bool GRK_CALLCONV grk_decompress_detect_format(const char* fileName, GRK_CODEC_FORMAT* fmt);
GRK_API bool GRK_CALLCONV grk_decompress_buffer_detect_format(uint8_t* buffer, size_t len,
															  GRK_CODEC_FORMAT* fmt);
GRK_API void GRK_CALLCONV grk_decompress_set_default_params(grk_decompress_core_params* parameters);
GRK_API grk_codec* GRK_CALLCONV grk_decompress_init(grk_stream_params* stream_params,
													grk_decompress_core_params* core_params);
GRK_API bool GRK_CALLCONV grk_decompress_read_header(grk_codec* codec,
													 grk_header_info* header_info);
GRK_API grk_image* GRK_CALLCONV grk_decompress_get_tile_image(grk_codec* codec, uint16_t tileIndex);
GRK_API grk_image* GRK_CALLCONV grk_decompress_get_composited_image(grk_codec* codec);
GRK_API bool GRK_CALLCONV grk_decompress_set_window(grk_codec* codec, float start_x, float start_y,
													float end_x, float end_y);
GRK_API bool GRK_CALLCONV grk_decompress(grk_codec* codec, grk_plugin_tile* tile);
GRK_API bool GRK_CALLCONV grk_decompress_tile(grk_codec* codec, uint16_t tileIndex);
typedef struct _grk_cparameters
{
	bool tile_size_on;
	uint32_t tx0;
	uint32_t ty0;
	uint32_t t_width;
	uint32_t t_height;
	uint16_t numlayers;
	bool allocationByRateDistoration;
	double layer_rate[GRK_MAX_LAYERS];
	bool allocationByQuality;
	double layer_distortion[GRK_MAX_LAYERS];
	char* comment[GRK_NUM_COMMENTS_SUPPORTED];
	uint16_t comment_len[GRK_NUM_COMMENTS_SUPPORTED];
	bool is_binary_comment[GRK_NUM_COMMENTS_SUPPORTED];
	size_t num_comments;
	uint8_t csty;
	uint8_t numgbits;
	GRK_PROG_ORDER prog_order;
	grk_progression progression[GRK_J2K_MAXRLVLS];
	uint32_t numpocs;
	uint8_t numresolution;
	uint32_t cblockw_init;
	uint32_t cblockh_init;
	uint8_t cblk_sty;
	bool irreversible;
	int32_t roi_compno;
	uint32_t roi_shift;
	uint32_t res_spec;
	uint32_t prcw_init[GRK_J2K_MAXRLVLS];
	uint32_t prch_init[GRK_J2K_MAXRLVLS];
	char infile[GRK_PATH_LEN];
	char outfile[GRK_PATH_LEN];
	uint32_t image_offset_x0;
	uint32_t image_offset_y0;
	uint8_t subsampling_dx;
	uint8_t subsampling_dy;
	GRK_SUPPORTED_FILE_FMT decod_format;
	GRK_SUPPORTED_FILE_FMT cod_format;
	grk_raw_cparameters raw_cp;
	uint32_t max_comp_size;
	bool enableTilePartGeneration;
	uint8_t newTilePartProgressionDivider;
	uint8_t mct;
	void* mct_data;
	uint64_t max_cs_size;
	uint16_t rsiz;
	uint16_t framerate;
	bool write_capture_resolution_from_file;
	double capture_resolution_from_file[2];
	bool write_capture_resolution;
	double capture_resolution[2];
	bool write_display_resolution;
	double display_resolution[2];
	GRK_RATE_CONTROL_ALGORITHM rateControlAlgorithm;
	uint32_t numThreads;
	int32_t deviceId;
	uint32_t duration; 
	uint32_t kernelBuildOptions;
	uint32_t repeats;
	bool writePLT;
	bool writeTLM;
	bool verbose;
} grk_cparameters;
GRK_API void GRK_CALLCONV grk_compress_set_default_params(grk_cparameters* parameters);
GRK_API grk_codec* GRK_CALLCONV grk_compress_init(grk_stream_params* stream_params,
												  grk_cparameters* parameters, grk_image* p_image);
GRK_API bool GRK_CALLCONV grk_compress(grk_codec* codec, grk_plugin_tile* tile);
GRK_API void GRK_CALLCONV grk_dump_codec(grk_codec* codec, uint32_t info_flag, FILE* output_stream);
GRK_API bool GRK_CALLCONV grk_set_MCT(grk_cparameters* parameters, float* encodingMatrix,
									  int32_t* dc_shift, uint32_t nbComp);
typedef struct _grk_plugin_load_info
{
	const char* pluginPath;
} grk_plugin_load_info;
GRK_API bool GRK_CALLCONV grk_plugin_load(grk_plugin_load_info info);
GRK_API void GRK_CALLCONV grk_plugin_cleanup(void);
GRK_API uint32_t GRK_CALLCONV grk_plugin_get_debug_state();
typedef struct _grk_plugin_init_info
{
	int32_t deviceId;
	bool verbose;
} grk_plugin_init_info;
GRK_API bool GRK_CALLCONV grk_plugin_init(grk_plugin_init_info initInfo);
typedef bool (*GRK_PLUGIN_COMPRESS_USER_CALLBACK)(grk_plugin_compress_user_callback_info* info);
GRK_API int32_t GRK_CALLCONV grk_plugin_compress(grk_cparameters* compress_parameters,
												 GRK_PLUGIN_COMPRESS_USER_CALLBACK callback);
GRK_API int32_t GRK_CALLCONV grk_plugin_batch_compress(const char* input_dir,
													   const char* output_dir,
													   grk_cparameters* compress_parameters,
													   GRK_PLUGIN_COMPRESS_USER_CALLBACK callback);
GRK_API bool GRK_CALLCONV grk_plugin_is_batch_complete(void);
GRK_API void GRK_CALLCONV grk_plugin_stop_batch_compress(void);
typedef int32_t (*grk_plugin_decompress_callback)(grk_plugin_decompress_callback_info* info);
GRK_API int32_t GRK_CALLCONV grk_plugin_decompress(grk_decompress_parameters* decompress_parameters,
												   grk_plugin_decompress_callback callback);
GRK_API int32_t GRK_CALLCONV grk_plugin_init_batch_decompress(
	const char* input_dir, const char* output_dir, grk_decompress_parameters* decompress_parameters,
	grk_plugin_decompress_callback callback);
GRK_API int32_t GRK_CALLCONV grk_plugin_batch_decompress(void);
GRK_API void GRK_CALLCONV grk_plugin_stop_batch_decompress(void);